# kukk_mb_tep

./: pyproject.toml  requirements.txt
mb_kukk/: config.json  excel_generator.py  lab_anal.py  lab_analysis.py  main.py  ui.py  update_mb.py  utilities.py
mb_kukk/db/: mb_kukk.db
mb_kukk/db/backup/: backup_mb_kukk.db
mb_kukk/reports/: 01.04.2025_report.xlsx  02.04.2025_report.xlsx  20.03.2025_report.xlsx
