[project]
name = "projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "babel==2.17.0",
    "colorama==0.4.6",
    "et-xmlfile==2.0.0",
    "loguru==0.7.3",
    "numpy==2.2.3",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "psutil==7.0.0",
    "pyodbc==5.2.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "pywin32==308",
    "six==1.17.0",
    "tkcalendar==1.6.1",
    "tzdata==2025.1",
    "win32-setctime==1.2.0",
]
